<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignTop="@+id/textView2"
        android:onClick="calculer"
        android:text="@string/bouttonLancer" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1Competence2"
        android:layout_below="@+id/checkBox1Competence2"
        android:text="@string/resultat"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/checkBox1Competence2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1Competence5"
        android:layout_below="@+id/checkBox1Competence5"
        android:text="@string/competence2" />

    <CheckBox
        android:id="@+id/checkBox1Competence3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox1Competence2"
        android:layout_below="@+id/textView1"
        android:text="@string/competence3" />

    <CheckBox
        android:id="@+id/checkBox1Competence1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/checkBox1Competence3"
        android:text="@string/competence1" />

    <CheckBox
        android:id="@+id/checkBox1Competence4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1Competence1"
        android:layout_below="@+id/checkBox1Competence1"
        android:text="@string/competence4" />

    <CheckBox
        android:id="@+id/checkBox1Competence5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox1Competence1"
        android:layout_below="@+id/checkBox1Competence4"
        android:text="@string/competence5" />

</RelativeLayout>